--- a/src/assets/fonts/generator/generator.css
+++ b/src/assets/fonts/generator/generator.css
@@ -14,7 +14,7 @@
 
 @font-face {
     font-family: 'Generator';
-    src: local('Generator Bold'), local('Generator-Bold'), url('Generator-UltraBold.woff2') format('woff2'), url('Generator-UltraBold.woff') format('woff'), url('Generator-UltraBold.ttf') format('truetype');
+    src: local('Generator Ultra Bold'), local('Generator-UltraBold'), url('Generator-UltraBold.woff2') format('woff2'), url('Generator-UltraBold.woff') format('woff'), url('Generator-UltraBold.ttf') format('truetype');
     font-weight: 800;
     font-style: normal;
 }
